package System;

public class Application {
    public static void main(String[] str){
    Application app = new Application();
    app.run();
    }
    public void run(){


    }
}
