package System.Interfaces;

public interface Input {
    String getInput();
    String promtChoice(String message);
}
