package System.Interfaces;

public interface Output {
    void print(String message);
    void printError(String message);
    void printMenu();
    void printLogo();

}
